cpp/debug
g++ -std=c++11 -o bin/split split.cpp Secret.cpp utility.cpp
Secret.cpp: In member function ‘void Secret::writeFile(const string&)’:
Secret.cpp:96:35: error: ‘getcwd’ is not a member of ‘utility’
     std::cout << share << ": " << utility::getcwd() << std::endl;
                                   ^
Secret.cpp:96:35: note: suggested alternative:
In file included from Secret.cpp:2:0:
utility.hpp:20:13: note:   ‘getcwd’
 std::string getcwd();
             ^
Makefile:2: recipe for target 'split' failed
make: *** [split] Error 1
